Fix printing when using a dark theme
The credit card output printout is no longer grey over a white background.

Add an executor helper to avoid duplicate code.

Add various linter fixes.