@@ -94,7 +94,7 @@ public class PeersWindowController implements WindowController
 				.doOnSuccess(profiles -> Platform.runLater(() -> profiles.forEach(profile -> {
 					if (profile.getLocations().size() == 1)
 					{
-						root.getChildren().add(new TreeItem<>(new PeerHolder(profile, profile.getLocations().get(0))));
+						root.getChildren().add(new TreeItem<>(new PeerHolder(profile, profile.getLocations().getFirst())));
 					}
 					else
 					{
